# guile-debbugs

./: .gitignore  CC-BY-SA-4.0.txt  CODE-OF-CONDUCT  ChangeLog  Makefile.am  NEWS  README.org  aclocal.m4  configure.ac  debbugs.scm  env.in  guile.am
debbugs/: base64.scm  bug.scm  cache.scm  config.scm  email.scm  operations.scm  rfc822.scm  soap.scm
doc/: guile-debbugs.texi
tests/: README  operations.scm  rfc822.scm
tests/requests/: README  get-bugs.xml  get-status.xml  newest-bugs.xml
tests/responses/: README  get-status1.xml  newest-bugs1.xml
